fixed btn behind container bug

--- a/application/src/Components/Presentation/Header/Header.css
+++ b/application/src/Components/Presentation/Header/Header.css
@@ -20,6 +20,7 @@
 }
 
 .profileBtnContainer{
+	pointer-events: none;
 	position: absolute;
 	text-align: center;
 	top: 1%;
